@@ -10,7 +10,6 @@ import org.apache.commons.lang3.tuple.Pair;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class GradleSupport implements ToolSupport<GradleConfiguration> {
 
@@ -65,7 +64,7 @@ public class GradleSupport implements ToolSupport<GradleConfiguration> {
                 .pathElements(localToolInstallationDetails.getPathElements())
                 .handledProjectResources(localToolInstallationDetails.getFileOverwrites()
                         .stream().map(Pair::getLeft)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build();
     }
 
