@@ -13,7 +13,6 @@ import org.apache.commons.lang3.tuple.Pair;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class JdkSupport implements ToolSupport<JdkConfiguration> {
 
@@ -74,7 +73,7 @@ public class JdkSupport implements ToolSupport<JdkConfiguration> {
                 .pathElements(localToolInstallationDetails.getPathElements())
                 .handledProjectResources(localToolInstallationDetails.getFileOverwrites()
                         .stream().map(Pair::getLeft)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build();
     }
 
