@@ -10,7 +10,6 @@ import org.apache.commons.lang3.tuple.Pair;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class MavenSupport implements ToolSupport<MavenConfiguration> {
 
@@ -43,6 +42,7 @@ public class MavenSupport implements ToolSupport<MavenConfiguration> {
         steps.add(new FindBinariesRootStep());
         steps.add(new RegisterPathElementStep("/bin"));
         steps.add(new RegisterMainExecutableStep("mvn"));
+        steps.add(new RegisterEnvironmentVariableStep("MAVEN_HOME","/"));
 
         toolConfiguration
                 .getGlobalSettingsFile()
@@ -70,7 +70,7 @@ public class MavenSupport implements ToolSupport<MavenConfiguration> {
                 .pathElements(localToolInstallationDetails.getPathElements())
                 .handledProjectResources(localToolInstallationDetails.getFileOverwrites()
                         .stream().map(Pair::getLeft)
-                        .collect(Collectors.toList()));
+                        .toList());
 
         toolConfiguration
                 .getUserSettingsFile()
